# agiflow-sdks

./: .commitlintrc.mjs  .eslintignore  .eslintrc.json  .gitignore  .pnpmfile.cjs  .prettierignore  Contribution.md  LICENSE  README.md  lint-staged.config.js  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js
.husky/: pre-commit
apps/agiflow-controlplane/: .env.example  .eslintrc.cjs  README.md  index.html  package.json  postcss.config.js  project.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/agiflow-controlplane/src/: App.scss  main.tsx  routeTree.gen.ts
apps/agiflow-sdk-samples/: README.md  project.json  pyproject.toml
apps/agiflow-sdk-samples/app/: openai_ollama.py
dockers/dev/: docker-compose.yml
docs/: architecture.md  mono-repo.md
examples/summary-agents/: .env.example  README.md  project.json  pyproject.toml
examples/summary-agents/src/: __init__.py  agent.py  main.py  tools.py
tools/builder/: Readme.md  package.json
tools/builder/src/: api-client.mjs  api.mjs  artifact-api.mjs  artifact-client.mjs  artifact-migration.mjs  artifact.mjs  index.mjs  ts-package.mjs  ts.mjs
tools/cli/: Readme.md  package.json
tools/cli-helper/: Readme.md  package.json
tools/cli-helper/src/: env.mjs  index.mjs  logger.mjs  process.mjs
tools/cli/cli/: st-build-api-client.mjs  st-build-api.mjs  st-build-artifact-api.mjs  st-build-artifact-client.mjs  st-build-artifact-migration.mjs  st-build-artifact.mjs  st-build-ts-package.mjs  st-build-ts.mjs  st-build.mjs  st-deploy-migration.mjs  st-deploy-node.mjs  st-deploy-seed.mjs  st-deploy.mjs  st-dev-node.mjs  st-dev.mjs  st-gen-db-migration.mjs  st-gen-db.mjs  st-gen.mjs  st-test-migration.mjs  st-test-node.mjs  st-test.mjs  st.mjs
tools/deployment/: Readme.md  package.json
tools/deployment/src/: constants.mjs  node.mjs  (+3 more)
tools/development/: Readme.md  package.json
tools/dockers/: Dockerfile  docker-compose-db-test.yml  docker-compose-db.yml  init.sh  kong.yml
tools/generator/: Readme.md  package.json
tools/testing/: Readme.md  package.json
(+198 files in other folders)
