[tool.coverage.run]
branch = true
source = [ "app" ]

[tool.coverage.report]
exclude_lines = [ "if TYPE_CHECKING:" ]
show_missing = true

[tool.poetry]
name = "agiflow-sdk-samples"
version = "0.0.1"
description = "Sample Application using Agiflow SDK"
authors = [
  "Vuong Ngo <agiflow.ai@gmail.com>"
]
license = "MIT"
readme = "README.md"

[[tool.poetry.packages]]
include = "app"

[tool.poetry.dependencies]
python = "<=3.13,>=3.10"
openai = "^1.12.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
agiflow-sdk = { path = "../../packages/python/agiflow-sdk", develop = true }

[tool.poetry.group.dev.dependencies]
autopep8 = "2.0.4"
flake8 = "7.0.0"
pytest = "8.0.2"
pytest-sugar = "1.0.0"
pytest-cov = "4.1.0"
pytest-html = "4.1.1"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
langchain_app = "app.langchain_app:langchain_app"
langchain_agent = "app.langchain_agent:langchain_agent"
